<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clans"
            android:title="@string/clans" />
        <item
            android:id="@+id/nav_players"
            android:title="@string/players" />
        <item
            android:id="@+id/nav_leagues"
            android:title="@string/leagues" />

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/nav_sub_header">
            <menu>
                <item
                    android:id="@+id/nav_sub_wins"
                    android:title="@string/nav_wins" />
                <item
                    android:id="@+id/nav_sub_loss"
                    android:title="@string/nav_loss" />
            </menu>
        </item>
    </group>

</menu>